Fixed pagination on mobile view

--- a/source/_assets/sass/_defaults.scss
+++ b/source/_assets/sass/_defaults.scss
@@ -74,7 +74,7 @@ article {
   text-decoration: none;
   padding: 14px 24px;
   transition: all 0.2s ease-in-out;
-  border-radius: 10px; 
+  border-radius: 10px;
 
   i {
     font-size: 1.25em;
@@ -89,9 +89,16 @@ article {
 
 .pagination {
   text-align: center;
-  font-size: 1.25em;
+  font-size: 1.5em;
   font-family: $template-header-font;
   a {
+      margin: 5px;
     text-decoration: none;
+    transition: all 0.2s ease-in-out;
+    display: inline-block;
+
+    &:hover {
+      transform: scale(1.3, 1.3);
+    }
   }
 }
