--- a/source/_assets/sass/_works.scss
+++ b/source/_assets/sass/_works.scss
@@ -1,4 +1,4 @@
-.works-container {
+.work-container {
   display: flex;
   align-items: stretch;
   flex-wrap: wrap;
